--- a/test1.html
+++ b/test1.html
@@ -1,5 +1,5 @@
 <head>
-  <title>test1</title>
+  <title>Mello</title>
 </head>
 
 <body>
@@ -13,13 +13,13 @@
 </template>
 
 <template name="stuffList">
-  <H1>Hello Peeps</H1>
+  <H1>Hello Mello</H1>
   <table align="center">
     {{#each stuffs}}
       {{> stuff}}
     {{/each}}
   </table>
-  <div style="margin-top:15px;">
+  <div class="form-inline" style="margin-top:15px;">
     <input type="text" class="stuffKey" placeholder="key">
     <input type="text" class="stuffValue" placeholder="value">
     <button class="btn btn-primary addStuff">Add Stuff</button>
