--- a/projects/client/projects.html
+++ b/projects/client/projects.html
@@ -20,4 +20,5 @@
   <div id="createProject">
     <input type="text" id="new-project" placeholder="New Project" />
   </div>
+  <input type="button" value="Call Foo" class="btn btn-inverse callFoo" />
 </template>
