--- a/main/client/main.html
+++ b/main/client/main.html
@@ -30,7 +30,9 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
+            {{#isolate}}
                 <div id="mainContent"></div>
+            {{/isolate}}
             </div>
         </div>
     </div>
