--- a/main/client/main.html
+++ b/main/client/main.html
@@ -4,35 +4,12 @@
 
 <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <div class="brand">Mello</div>
-          <div class="nav-collapse collapse">
-	    <ul class="nav pull-right">
-		  {{> loginButtons}}
-	    </ul>
-            <ul class="nav">
-              <li class="navLink"><a href="/p/home">Home</a></li>
-              <li class="navLink"><a href="/p/about">About</a></li>
-              <li class="navLink"><a href="/p/contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    {{> navbar}}
 
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-            {{#isolate}}
                 <div id="mainContent"></div>
-            {{/isolate}}
             </div>
         </div>
     </div>
