--- a/app/core/violet/client/violet.html
+++ b/app/core/violet/client/violet.html
@@ -5,7 +5,7 @@
 			<li><a href="#">Meteor</a></li>
 		</ul>
 	</div>
-	<div class="row-fluid">
+	<div class="dash row-fluid">
 		<div class="span3">
 			<div class="collectionList">{{>collections}}</div>
 			<div class="">
