--- a/app/core/home/client/home.html
+++ b/app/core/home/client/home.html
@@ -12,7 +12,7 @@
 				</ul>
 				<ul class="nav">
 					<li class="navLink"><a href="/#/home">Home</a></li>
-					<li class="navLink"><a href="/#/about">About</a></li>
+					<li class="navLink"><a href="/#violet">Voilet</a></li>
 					<li class="navLink"><a href="/#/contact">Contact</a></li>
 				</ul>
 			</div>
