Add violet module for db administration

--- a/main/client/navbar.html
+++ b/main/client/navbar.html
@@ -13,6 +13,7 @@
               <li class="navLink"><a href="/home">Home</a></li>
               <li class="navLink"><a href="/about">About</a></li>
               <li class="navLink"><a href="/contact">Contact</a></li>
+              <li class="navLink"><a href="/violet">Violet</a></li>
             </ul>
             <div class="pull-right">
                 {{#if currentUser}}
