Add prettyPrint helper to db admin so documents retrieved from db and printed nicely

--- a/violet/client/violet.html
+++ b/violet/client/violet.html
@@ -27,8 +27,8 @@
 
 <template name="documents">
 	{{#each list}}
-		<div class="document">
-			<pre>{{this}}</pre>
+		<div class="document well well-small">
+			{{prettyPrint this "null"}}
 		</div>
 	{{/each}} 
 </template>
