more account dialogs

--- a/main/client/createAccount.html
+++ b/main/client/createAccount.html
@@ -12,6 +12,10 @@
             <table style="margin-left:20px;">
                 <col width="130">
                 <tr>
+                    <td>Email Address</td>
+                    <td><input type="text" id="createAcct-email"></td>
+                </tr>
+                <tr>
                     <td>Username</td>
                     <td><input type="text" id="createAcct-username"></td>
                 </tr>
