--- a/main/client/navbar.html
+++ b/main/client/navbar.html
@@ -22,8 +22,8 @@
                         <ul class="dropdown-menu">
                           <li><a href="javascript:void(0)" class="logoutBtn">Log Out</a></li>
                           <li class="divider"></li>
-                          <li><a href="javascript:void(0)" class="manageAcctBtn">Manage Account</a></li>
-                          <li><a href="javascript:void(0)" class="manageAcctBtn">Change Password</a></li>                        </ul>
+                          <li><a href="javascript:void(0)" onclick="Template.manageAcctModal.show()">Manage Account</a></li>
+                          <li><a href="javascript:void(0)" onclick="Template.changePasswordModal.show()">Change Password</a></li>                        </ul>
                       </li>
                     </ul>
                 {{else}}
@@ -34,7 +34,7 @@
                           <li><a href="javascript:void(0)" onclick="Template.loginModal.show()">Login</a></li>
                           <li class="divider"></li>
                           <li><a href="javascript:void(0)" onclick="Template.createAcctModal.show()">Create New Account</a></li>
-                          <li><a href="javascript:void(0)" class="forgotPwdBtn">Forgot Password</a></li>
+                          <li><a href="javascript:void(0)" onclick="Template.forgotPasswordModal.show()">Forgot Password</a></li>
                         </ul>
                       </li>
                     </ul>
