more dialog love

--- a/main/client/createAccount.html
+++ b/main/client/createAccount.html
@@ -1,5 +1,5 @@
 <template name="createAcctModal">
-    <div class="modal hide fade" id="createAcctModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal hide" id="createAcctModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="myModalLabel">Create New Account</h3>
