--- a/main/client/disconnected.html
+++ b/main/client/disconnected.html
@@ -1,5 +1,5 @@
 <template name="disconnectedModal">
-    <div class="modal hide fade" id="disconnectedModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal hide" id="disconnectedModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
       <div class="modal-header">
         <h3 id="myModalLabel">Disconnected</h3>
       </div>
