--- a/main/client/forgotPassword.html
+++ b/main/client/forgotPassword.html
@@ -1,5 +1,5 @@
 <template name="forgotPasswordModal">
-    <div class="modal hide fade" id="forgotPasswordModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal hide" id="forgotPasswordModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="myModalLabel">Recover Forgotten Password</h3>
