--- a/main/client/navbar.html
+++ b/main/client/navbar.html
@@ -15,9 +15,9 @@
               <li class="navLink"><a href="/contact">Contact</a></li>
               <li class="navLink"><a href="/violet">Violet</a></li>
             </ul>
-            <div class="pull-right">
+            <div class="pull-right" style="min-width:150px;">
                 {{#if currentUser}}
-                    <ul class="nav">
+                    <ul class="nav pull-right">
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.username}} <b class="caret"></b></a>
                         <ul class="dropdown-menu">
