--- a/main/client/changePassword.html
+++ b/main/client/changePassword.html
@@ -1,5 +1,5 @@
 <template name="changePasswordModal">
-    <div class="modal hide fade" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal hide" id="changePasswordModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="myModalLabel">Change Password</h3>
