--- a/main/client/manageAcct.html
+++ b/main/client/manageAcct.html
@@ -1,5 +1,5 @@
 <template name="manageAcctModal">
-    <div class="modal hide fade" id="manageAcctModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal hide" id="manageAcctModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
         <h3 id="myModalLabel">Manage Account</h3>
